tests/test62.rael.exp
Error [tests/test62.rael:2:13]: Invalid operation (-) on types
|     :a ?= 2 - "1"
|             ^
