tests/test62.rael
if 1 {
    :a ?= 2 - "1"
}